message AuthenticationFailed {
	required string reason = 1;
}

message AuthenticationSuccess {
	required uint64 sessionId = 1;
	required string password = 2;
}

message FollowUsernameFailed {
	required uint64 firstUnapplied = 1;
	required string username = 2;
	required string reason = 3;
}

message FollowUserIdFailed {
	required uint64 firstUnapplied = 1;
	required uint64 userId = 2;
	required string reason = 3;
}

message UserData {
	required uint64 firstUnapplied = 1;
	required uint64 userId = 2;
	required string key = 3;
	required string value = 4;
}

message UserDataDone {
	required uint64 firstUnapplied = 1;
	required uint64 userId = 2;
}

message UserDataChange {
	required uint64 firstUnapplied = 1;
	required uint64 userId = 2;
	required string key = 3;
	required string value = 4;
}

message StoppedFollowing {
	required uint64 userId = 1;
	required string reason = 2;
}

message Received {
	required uint64 senderUserId = 1;
	required uint64 senderSessionId = 2;
	required string tag = 3;
	required string content = 4;
}
